force-app/main/default/objects/TestDataLakeObj_0108__dlm/TestDataLakeObj_0108__dlm.object-meta.xml
<CustomObject>
    <label>TestDataLakeObj_0108</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>TestDataLakeObj_0108</labelOverride>
        <masterLabel>TestDataLakeObj_0108</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>