force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/application_date__c.field-meta.xml
<CustomField>
    <fullName>application_date__c</fullName>
    <label>application_date</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>application_date</labelOverride>
        <masterLabel>application_date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>