force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/first_premium__c.field-meta.xml
<CustomField>
    <fullName>first_premium__c</fullName>
    <label>first_premium</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>first_premium</labelOverride>
        <masterLabel>first_premium</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>