force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/insurance_period_start__c.field-meta.xml
<CustomField>
    <fullName>insurance_period_start__c</fullName>
    <label>insurance_period_start</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>insurance_period_start</labelOverride>
        <masterLabel>insurance_period_start</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>