force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/insured__c.field-meta.xml
<CustomField>
    <fullName>insured__c</fullName>
    <label>insured</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>insured</labelOverride>
        <masterLabel>insured</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>