force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/number_of_locations__c.field-meta.xml
<CustomField>
    <fullName>number_of_locations__c</fullName>
    <label>number_of_locations</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>number_of_locations</labelOverride>
        <masterLabel>number_of_locations</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>