force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/payment_cycle__c.field-meta.xml
<CustomField>
    <fullName>payment_cycle__c</fullName>
    <label>payment_cycle</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>payment_cycle</labelOverride>
        <masterLabel>payment_cycle</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>