force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/policyholder__c.field-meta.xml
<CustomField>
    <fullName>policyholder__c</fullName>
    <label>policyholder</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>policyholder</labelOverride>
        <masterLabel>policyholder</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>