force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/previous_contract_number__c.field-meta.xml
<CustomField>
    <fullName>previous_contract_number__c</fullName>
    <label>previous_contract_number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>previous_contract_number</labelOverride>
        <masterLabel>previous_contract_number</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>