force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/rel_1767851820231_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1767851820231_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestDataLakeObj_0108_SourceRecordId__rel</label>
    <referenceTo>ADL_TestLib__dlm</referenceTo>
    <relationshipLabel>TestDataLakeObj_0108_SourceRecordId__rel</relationshipLabel>
    <relationshipName>rel_1767851820231_end</relationshipName>
    <type>Lookup</type>
</CustomField>