force-app/main/default/objects/TestDataLakeObj_0108__dlm/fields/renewal_contract__c.field-meta.xml
<CustomField>
    <fullName>renewal_contract__c</fullName>
    <label>renewal_contract</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>renewal_contract</labelOverride>
        <masterLabel>renewal_contract</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>